# sirius_simulator

./: .gitignore  README.md
sirius_gazebo/: CMakeLists.txt  README.md  package.xml
sirius_gazebo/launch/: markers_erc22.launch  sirius_gazebo.launch
sirius_gazebo_plugins/: CMakeLists.txt  README.md  package.xml
sirius_gazebo_plugins/include/sirius_gazebo_plugins/: sirius_gazebo_ros_gps_sensor.h  sirius_gazebo_ros_imu_sensor.h  sirius_gazebo_ros_magnetometer_sensor.h  sirius_gazebo_ros_p3d.h
sirius_gazebo_plugins/src/: sirius_gazebo_ros_gps_sensor.cpp  sirius_gazebo_ros_imu_sensor.cpp  sirius_gazebo_ros_magnetometer_sensor.cpp  sirius_gazebo_ros_p3d.cpp
sirius_simulator/: CMakeLists.txt  package.xml
