<?xml version="1.0"?>
<package format="2">
  <name>sirius_gazebo</name>
  <version>1.0.0</version>
  <description>Sirius gazebo launch files</description>
  <maintainer email="gabriel@gabrielb.dev">Gabriel Brzeziński</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>leo_gazebo_worlds</exec_depend>
  <exec_depend>sirius_calibration</exec_depend>
  <exec_depend>sirius_control</exec_depend>
  <exec_depend>sirius_description</exec_depend>
  <exec_depend>sirius_gazebo_plugins</exec_depend>
  <exec_depend>sirius_navigation</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
</package>
