<?xml version="1.0"?>
<package format="2">
  <name>sirius_gazebo_plugins</name>
  <version>1.0.0</version>
  <description>Plugins for sirius gazebo simulation</description>
  <maintainer email="gabriel@gabrielb.com">Gabriel Brzeziński</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
</package>
